added email address field

--- a/employee.html
+++ b/employee.html
@@ -33,6 +33,9 @@
             <div id="name">
                 <h5>Name:</h5>
             </div>
+            <div id="email">
+                <h5>Email Address:</h5>
+            </div>
             <div id="address">
                 <h5>Address:</h5>
             </div>
