--- a/managerHomepage.html
+++ b/managerHomepage.html
@@ -7,22 +7,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
         integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <link rel="stylesheet" href="employee.css" type="text/css">
-    <title>Employee Page</title>
+    <link rel="stylesheet" href="managerHomepage.css" type="text/css">
+    <title>Manager Page</title>
 </head>
 
 <body>
     <nav class="navbar nav-pills navbar-expand-">
-        <a class="navbar-brand">Employee Portal</a>
-        <a class="nav-link active" href="employee.html">Home</a>
-        <a class="nav-link" href="reimbursement.html">Reimbursement</a>
+        <a class="navbar-brand">Manager Portal</a>
+        <a class="nav-link active" href="managerHomepage.html">Home</a>
+        <a class="nav-link" href="managerReimbursement.html">Reimbursement</a>
+        <a class="nav-link" href="employeeReimbursements.html">Employee Reimbursements</a>
 
     </nav>
     <div id="title">
-        <h4>Welcome to the employee page!</h4>
+        <h4>Welcome to the Manager page!</h4>
     </div>
-    <div id="eInfo">
-        <h3>Employee Information</h3>
+    <div id="mInfo">
+        <h3>Manager Information</h3>
     </div>
     <div class="row">
         <div class="col-lg-4">
@@ -55,7 +56,7 @@
 
         <div class="col-lg-4">
             <div id="pic">
-                <p>employee picture?</p>
+                <p>Manager picture?</p>
                 <img class="pic" src="" alt="please upload user photo">
             </div>
             <div id="button">
@@ -65,9 +66,6 @@
 
     </div>
 
-
-
-    <script src="employee.js"></script>
 </body>
 
 </html>
