--- a/reimbursement.html
+++ b/reimbursement.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
         integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" href="reimbursement.css" type="text/css">
-    <title>Reimbursements</title>
+    <title>Employee Reimbursements</title>
 </head>
 
 <body>
     <nav class="navbar nav-pills navbar-expand-">
-        <a class="navbar-brand" href="">Employee Page</a>
+        <a class="navbar-brand">Employee Portal</a>
         <a class="nav-link" href="employee.html">Home</a>
         <a class="nav-link active" href="reimbursement.html">Reimbursement</a>
 
