added js so the console is returning the input from reimbursements

--- a/employee.html
+++ b/employee.html
@@ -14,6 +14,7 @@
 <body>
     <nav class="navbar nav-pills navbar-expand-">
         <a class="navbar-brand">Employee Portal</a>
+        <a class="nav-link" href="managerHomepage.html">Manager Homepage</a>
         <a class="nav-link active" href="employee.html">Home</a>
         <a class="nav-link" href="reimbursement.html">Reimbursement</a>
 
@@ -58,7 +59,7 @@
                 <p>employee picture?</p>
                 <img class="pic" src="" alt="please upload user photo">
             </div>
-            <div id="button">
+            <div id="rbutton">
                 <button class="btn">Update Profile Image</button>
             </div>
         </div>
