--- a/managerReimbursement.html
+++ b/managerReimbursement.html
@@ -39,7 +39,7 @@
                             <img src="upload">
                         </div>
                         <div id="button">
-                            <button class="btn">Submit</button>
+                            <button type="submit" class="btn">Submit</button>
                         </div>
                     </form>
                 </div>
@@ -47,9 +47,12 @@
             <div class="col-md-4">
                 <div id="pReimbursements">
                     <p>Pending Reimbursements</p>
+                    
                 </div>
                 <div id="pReimbursementsBody">
                     <p>Insert later</p>
+                    <ul id="pendingReimbursements">
+                    </ul>
                 </div>
             </div>
             <div class="col-md-4">
@@ -58,6 +61,8 @@
                 </div>
                 <div id="rReimbursementsBody">
                     <p>Insert Later</p>
+                    <ul id="resolvedReimbursements">
+                    </ul>
                 </div>
             </div>
         </div>
