--- a/reimbursement.html
+++ b/reimbursement.html
@@ -14,6 +14,7 @@
 <body>
     <nav class="navbar nav-pills navbar-expand-">
         <a class="navbar-brand">Employee Portal</a>
+        <a class="nav-link" href="managerHomepage.html">Manager Homepage</a>
         <a class="nav-link" href="employee.html">Home</a>
         <a class="nav-link active" href="reimbursement.html">Reimbursement</a>
 
@@ -56,6 +57,8 @@
             </div>
             <div id="pReimbursementsBody">
                 <p>Insert later</p>
+                <ul id="pendingReimbursements">
+                </ul>
             </div>
         </div>
         <div class="col-md-4">
@@ -64,6 +67,8 @@
             </div>
             <div id="rReimbursementsBody">
                 <p>Insert Later</p>
+                <ul id="resolvedReimbursements">
+                </ul>
             </div>
         </div>
     </div>
