--- a/managerHomepage.html
+++ b/managerHomepage.html
@@ -14,6 +14,7 @@
 <body>
     <nav class="navbar nav-pills navbar-expand-">
         <a class="navbar-brand">Manager Portal</a>
+        <a class="nav-link" href="employee.html">Employee Homepage</a>
         <a class="nav-link active" href="managerHomepage.html">Home</a>
         <a class="nav-link" href="managerReimbursement.html">Reimbursement</a>
         <a class="nav-link" href="employeeReimbursements.html">Employee Reimbursements</a>
