added default profile image, made form fields required, & added form reset button

--- a/employee.html
+++ b/employee.html
@@ -44,7 +44,7 @@
                 <h5>Phone Number:</h5>
             </div>
             <div id="lButton">
-                <button class="btn">Update Information</button>
+                <button class="btn">Update Information</button> 
             </div>
         </div>
 
@@ -56,8 +56,7 @@
 
         <div class="col-lg-4">
             <div id="pic">
-                <p>employee picture?</p>
-                <img class="pic" src="" alt="please upload user photo">
+                <img class="pic" src="BlankProfile.png" alt="please upload user photo">
             </div>
             <div id="rbutton">
                 <button class="btn">Update Profile Image</button>
