--- a/managerHomepage.html
+++ b/managerHomepage.html
@@ -57,8 +57,7 @@
 
         <div class="col-lg-4">
             <div id="pic">
-                <p>Manager picture?</p>
-                <img class="pic" src="" alt="please upload user photo">
+                <img class="pic" src="BlankProfile.png" alt="please upload user photo">
             </div>
             <div id="button">
                 <button class="btn">Update Profile Image</button>
