working database reader

--- a/employee.html
+++ b/employee.html
@@ -70,7 +70,7 @@
                 <img class="pic" src="BlankProfile.png" alt="please upload user photo">
             </div>
             <div id="rbutton">
-                <button class="btn">Update Profile Image</button>
+                <button class="btn" name="picUpdate">Update Profile Image</button>
             </div>
         </div>
 
