--- a/p1/src/main/webapp/employee.html
+++ b/p1/src/main/webapp/employee.html
@@ -10,14 +10,18 @@
     <link rel="stylesheet" href="employee.css" type="text/css">
     <title>Employee Page</title>
 </head>
-
 <body>
+
     <nav class="navbar nav-pills navbar-expand-">
         <a class="navbar-brand">Employee Portal</a>
         <a class="nav-link active" href="employee.html">Home</a>
         <a class="nav-link" href="reimbursement.html">Reimbursement</a>
+<form  method="GET" action = "LogOut">  
+        <a class="nav-link" href="login.html" >Logout</a>
+</form>
+ </nav>
 
-    </nav>
+   
     <div id="title">
         <h4>Welcome to the employee page!</h4>
     </div>
