--- a/p1/src/main/webapp/managerHomepage.html
+++ b/p1/src/main/webapp/managerHomepage.html
@@ -12,13 +12,18 @@
 </head>
 
 <body>
-    <nav class="navbar nav-pills navbar-expand-">
+    <nav class="navbar nav-pills navbar-expand-" >
         <a class="navbar-brand">Manager Portal</a>
         <a class="nav-link active" href="managerHomepage.html">Home</a>
+        <a class="nav-link " href="currentEmployees.html">Current Employees</a>
         <a class="nav-link" href="managerReimbursement.html">Reimbursement</a>
         <a class="nav-link" href="employeeReimbursements.html">Employee Reimbursements</a>
-
+    <form  method="GET" action = "LogOut"> 
+        <a class="nav-link" href="login.html">Logout</a>
+    </form>
     </nav>
+    
+    
     <div id="title">
         <h4>Welcome to the Manager page!</h4>
     </div>
