--- a/reimbursement.html
+++ b/reimbursement.html
@@ -55,11 +55,11 @@
                 <p>Pending Reimbursements</p>
             </div>
             <div id="pReimbursementsBody">
-                <p>Insert later</p>
+                <!-- <p>Insert later</p> -->
                 <button id="get-pending-reimbursements">View Pending Reimbursements</button>
                 <ul id="pendingReimbursements">
                     <form id="update-reimbursements" hidden>
-                        </form>
+                    </form>
 
                 </ul>
             </div>
