minor employeeReimbursements changes & added sql table code

--- a/employeeReimbursements.html
+++ b/employeeReimbursements.html
@@ -31,7 +31,7 @@
                             <option>employee2</option>
                             <option>employee3</option>
                         </select>
-                        <input type="submit">
+                        <input type="submit" id="get-pending-reimbursements">
                     </form>
                 </div>
             </div>
@@ -42,6 +42,8 @@
                     <h4>Submitted Reimbursements:</h4>
                     <!-- <p>populate with the reimbursements of selected employee</p> -->
                     <ul id="eReimbursementsResults">
+                        <form id="update-reimbursements" hidden>
+                        </form>
                     </ul>
                 </div>
             </div>
