managers can view all employees

--- a/managerHomepage.html
+++ b/managerHomepage.html
@@ -52,6 +52,10 @@
         <div class="col-lg-4">
             <div class="mid">
                 <p>generic business photo or company logo</p>
+                <button type="submit" class="btn" id="get-employees">View all employees</button>
+                <ul id="employee-list">
+                    <form id="employee-form"></form>
+                </ul>
             </div>
         </div>
 
@@ -65,7 +69,7 @@
         </div>
 
     </div>
-
+    <script src="managerHomepage.js"></script>
 </body>
 
 </html>
