change approve/deny with a dropdown

--- a/employeeReimbursements.html
+++ b/employeeReimbursements.html
@@ -50,7 +50,7 @@
                         <input type="number" name="amount" placeholder="amount">
                         <input type="text" name="date" placeholder="date">
                         <!-- <input type="text" name="status" placeholder="approved/denied"> -->
-                        <select name ="approveDeny">
+                        <select name ="status">
                             <option>Approve</option>
                             <option>Deny</option>
                         </select>
