--- a/managerReimbursement.html
+++ b/managerReimbursement.html
@@ -66,8 +66,11 @@
                 <p>Resolved Reimbusements</p>
             </div>
             <div id="rReimbursementsBody">
-                <p>Insert Later</p>
+                <!-- <p>Insert Later</p> -->
+                <button id="get-resolved-reimbursements">View Resolved Reimbursements</button>
                 <ul id="resolvedReimbursements">
+                    <form id="resolved-reimbursements">
+                    </form>
                 </ul>
             </div>
         </div>
