added logout button to all pages

--- a/reimbursement.html
+++ b/reimbursement.html
@@ -17,6 +17,7 @@
         <a class="nav-link" href="managerHomepage.html">Manager Homepage</a>
         <a class="nav-link" href="employee.html">Home</a>
         <a class="nav-link active" href="reimbursement.html">Reimbursement</a>
+        <a class="nav-link" href="login.html">Logout</a>
 
     </nav>
     <div id="title">
