--- a/employeeReimbursements.html
+++ b/employeeReimbursements.html
@@ -18,6 +18,7 @@
         <a class="nav-link" href="managerHomepage.html">Home</a>
         <a class="nav-link" href="managerReimbursement.html">Reimbursement</a>
         <a class="nav-link active" href="employeeReimbursements.html">Employee Reimbursements</a>
+        <a class="nav-link" href="login.html">Logout</a>
     </nav>
     <div class="row">
         <div class="col-6">
