--- a/reimbursement.html
+++ b/reimbursement.html
@@ -71,8 +71,10 @@
             </div>
             <div id="rReimbursementsBody">
                 <p>Insert Later</p>
+                <button id="get-resolved-reimbursements">View Resolved Reimbursements</button>
                 <ul id="resolvedReimbursements">
-
+                    <form id="resolved-reimbursements">
+                    </form>
                 </ul>
             </div>
         </div>
