--- a/login.html
+++ b/login.html
@@ -55,7 +55,7 @@
 
     <!-- -----------LOGIN FUNCTIONALITY---------- -->
     <!-- ---------------------------------------- -->
-    <form method="POST" action="Login">
+    <form id="loginForm" method="POST" action="Login">
         <div id="user-Pass">
             <label>Email:</label>
             <input type="text" name="login_email">
