--- a/employeeReimbursements.html
+++ b/employeeReimbursements.html
@@ -28,9 +28,7 @@
                         <label for="ePicker">Which employee's reimbursements would you like to view?</label>
                         <select name="ePicker">
                             <option>All</option>
-                            <option>employee1</option>
-                            <option>employee2</option>
-                            <option>employee3</option>
+                            <option>Jim</option>
                         </select>
                         <input type="submit" id="get-pending-reimbursements">
                     </form>
@@ -45,7 +43,7 @@
                     <ul id="eReimbursementsResults">
 
                     </ul>
-                    
+
                 </div>
             </div>
         </div>
@@ -67,6 +65,16 @@
             </select>
             <input type="submit" class="btn">
         </form>
+    </div>
+    <div>
+        <div id="employeeReimbursements">
+            <h4>Resolved Reimbursements:</h4>
+            <button id="get-resolved-reimbursements">View Resolved Reimbursements</button>
+            <ul id="resolvedReimbursements">
+                <form id="resolved-reimbursements">
+                </form>
+
+        </div>
     </div>
 
 
