--- a/employee.html
+++ b/employee.html
@@ -28,8 +28,22 @@
     </div>
     <div class="row">
         <div class="col-sm-4">
+
+            <button type="submit" class="btn" id="get-employees">View employee Information</button>
+            <form id="update-employee" hidden>
+                    <span>ID:</span>
+                    <input type="number" name="id" placeholder=0 readonly>
+                    <input type="text" name="address" placeholder="address">
+                    <input type="text" name="password" placeholder="password">
+                    <input type="text" name="phone" placeholder="phone">
+                    <input type="submit" class="btn">
+                </form>
+            <!-- <ul id="employee-list">
+                <form id="employee-form"></form>
+            </ul> -->
+
             <!-- potentially switch to 2 "2" columns and right align returned info -->
-            <div id="jTitle">
+            <!-- <div id="jTitle">
                 <h5>Position:</h5>
             </div>
             <div id="name">
@@ -43,11 +57,11 @@
             </div>
             <div id="pNumber">
                 <h5>Phone Number:</h5>
-            </div>
+            </div> -->
             <!-- <div id="lButton">
                 <button class="btn">Update Information</button>
             </div> -->
-            <div id="popup" class="popup" onclick="updateInfo()">Update Information
+            <!-- <div id="popup" class="popup" onclick="updateInfo()">Update Information
                 <form class="popupform" id="updatePopup">
                     <h5>Email Address:</h5>
                     <input type="email" name="uEmail" placeholder="email@something.com">
@@ -57,12 +71,16 @@
                     <input type="number" name="uPhone" placeholder="###-###-####">
                     <input id="updateSubmit" type="submit" class="btn" name="uSubmit">
                 </form>
-            </div>
+            </div> -->
         </div>
 
         <div class="col-sm-4">
             <div class="mid">
-                <p>generic business photo or company logo</p>
+                <!-- <p>generic business photo or company logo</p> -->
+                <ul id="employee-list">
+                        <form id="employee-form"></form>
+                    </ul>
+
             </div>
         </div>
 
