added background color and rearranged pages

--- a/employeeReimbursements.html
+++ b/employeeReimbursements.html
@@ -14,7 +14,6 @@
 <body>
     <nav class="navbar nav-pills navbar-expand-">
         <a class="navbar-brand">Manager Portal</a>
-        <a class="nav-link" href="employee.html">Employee Homepage</a>
         <a class="nav-link" href="managerHomepage.html">Home</a>
         <a class="nav-link" href="managerReimbursement.html">Reimbursement</a>
         <a class="nav-link active" href="employeeReimbursements.html">Employee Reimbursements</a>
@@ -66,7 +65,7 @@
             <input type="submit" class="btn">
         </form>
     </div>
-    <div>
+    <div id="resolved">
         <div id="employeeReimbursements">
             <h4>Resolved Reimbursements:</h4>
             <button id="get-resolved-reimbursements">View Resolved Reimbursements</button>
