--- a/managerHomepage.html
+++ b/managerHomepage.html
@@ -14,7 +14,6 @@
 <body>
     <nav class="navbar nav-pills navbar-expand-">
         <a class="navbar-brand">Manager Portal</a>
-        <a class="nav-link" href="employee.html">Employee Homepage</a>
         <a class="nav-link active" href="managerHomepage.html">Home</a>
         <a class="nav-link" href="managerReimbursement.html">Reimbursement</a>
         <a class="nav-link" href="employeeReimbursements.html">Employee Reimbursements</a>
@@ -30,7 +29,7 @@
     <div class="row">
         <div class="col-lg-4">
             <!-- potentially switch to 2 "2" columns and right align returned info -->
-            <div id="jTitle">
+            <!-- <div id="jTitle">
                 <h5>Position:</h5>
             </div>
             <div id="name">
@@ -47,12 +46,12 @@
             </div>
             <div id="lButton">
                 <button class="btn">Update Information</button>
-            </div>
+            </div> -->
         </div>
 
         <div class="col-lg-4">
             <div class="mid">
-                <p>generic business photo or company logo</p>
+                <!-- <p>generic business photo or company logo</p> -->
                 <button type="submit" class="btn" id="get-employees">View all employees</button>
                 <ul id="employee-list">
                     <form id="employee-form"></form>
@@ -65,7 +64,7 @@
                 <img class="pic" src="BlankProfile.png" alt="please upload user photo">
             </div>
             <div id="button">
-                <button class="btn">Update Profile Image</button>
+                <!-- <button class="btn">Update Profile Image</button> -->
             </div>
         </div>
 
