slight edit to login page

--- a/login.html
+++ b/login.html
@@ -32,9 +32,9 @@
     <!-- ---------------------------------------- -->
     <!-- -----------LOGIN FUNCTIONALITY---------- -->
 
-    <div id="logo">
+    <!-- <div id="logo">
         <img src="" alt="not here yet be patient">
-    </div>
+    </div> -->
 
     <script src="login.js"></script>
 </body>
